Week5/Day5-K8s-Ingress-Project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: week5-ingress
spec:
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
